fix: card spacing

--- a/src/components/A11yStatus/A11yStatus.module.scss
+++ b/src/components/A11yStatus/A11yStatus.module.scss
@@ -42,6 +42,10 @@
 }
 
 .card-group {
+  div {
+    --space: 0;
+  }
+
   :global(.cds--resource-card) {
     border-right: 1px solid $border-subtle-01;
     border-bottom: 1px solid $border-subtle-01;
